# RLCR

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
results/: baseline_results.json  cold_start_results.json  full_evaluation.json  training_results.json
results/figures/: results_table.md
scripts/: 01_download_data.py  02_simulate_teams.py  03_run_baseline.py  04_launch_sglang.sh  05_grpo_train.py  06_evaluate.py  06b_ab_test.py  07_scale_4b.py  08_visualize.py  09_teacher_label.py  10_distill.py  11_eval_distilled.py  patch_deps.sh  run_all.sh
src/: __init__.py  config.py
src/baselines/: __init__.py  distilled_filter.py  embedding_filter.py
src/data/: __init__.py  downloader.py  parser.py  team_simulator.py
src/distillation/: __init__.py  distill_trainer.py  teacher_labeler.py
src/evaluation/: __init__.py  ab_test.py  cold_start.py  metrics.py
src/models/: __init__.py  scoring.py  sglang_server.py
src/training/: __init__.py  grpo.py  rewards.py  verl_reward.py  verl_trainer.py  verl_wrapper.py
src/visualization/: __init__.py  charts.py
