[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rlcr"
version = "0.1.0"
description = "Reinforcement Learning for Code Review Filtering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "datasets>=2.18.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
    "trl>=0.12.0",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.7.4",
    "ray[default]>=2.9.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.1",
    "omegaconf>=2.3.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "scikit-learn>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
